--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         padding: 0;
         border: 0;
         box-sizing: border-box;
+        font-family: "Fira GFW Sans", Helvetica, serif;
       }
     </style>
   </head>
