--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,6 @@
       </div>
     </section>
     <div id="footerGfw"></div>
-    <script id="loader-gfw" data-current=".shape-home" src="./gfw-assets.dev.js"></script>
+    <script id="loader-gfw" data-current=".shape-fires" src="./gfw-assets.dev.js"></script>
   </body>
 </html>
